# zeit.msal

./: CHANGES.rst  CHANGES.txt  README.rst  pyproject.toml  setup.py
docs/changelog/: msal.change
src/zeit/msal/: __init__.py  authenticate.py
